--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Population top</title><link rel="stylesheet" href="main.b61528b3.css"></head><body> <div class="container"> <h1>TOP 10 LARGEST COUNTRIES BY POPULATION</h1> <ol class="list"> <li class="list__item"> <div> <img src="flag-china.a0a15249.gif" alt="China flag"> China: </div> <span class="population">1,439,234,240</span> </li> <li class="list__item"> <div> <img src="flag-india.d05fa86c.gif" alt="India flag"> India: </div> <span class="population">1,379,784,212</span> </li> <li class="list__item"> <div> <img src="flag-usa.bfaf05d8.gif" alt="USA flag"> USA: </div> <span class="population">330,971,314</span> </li> <li class="list__item"> <div> <img src="flag-indonesia.b56c8268.gif" alt="Indonesia flag"> Indonesia: </div> <span class="population">273,476,730</span> </li> <li class="list__item"> <div> <img src="flag-pakistan.5f78bceb.gif" alt="Pakistan flag"> Pakistan: </div> <span class="population">220,822,025</span> </li> <li class="list__item"> <div> <img src="flag-brazil.7a2f8f43.gif" alt="Brazil flag"> Brazil: </div> <span class="population">220,822,025</span> </li> <li class="list__item"> <div> <img src="flag-nigeria.3a8a4ecf.gif" alt="Nigeria flag"> Nigeria: </div> <span class="population">220,822,025</span> </li> <li class="list__item"> <div> <img src="flag-bangladesh.2d7c6419.gif" alt="Bangladesh flag"> Bangladesh: </div> <span class="population">164,662,809</span> </li> <li class="list__item"> <div> <img src="flag-russia.8c399fff.gif" alt="Russia flag"> Russia: </div> <span class="population">145,933,461</span> </li> <li class="list__item"> <div> <img src="flag-mexico.38a5094b.gif" alt="Mexico flag"> Mexico: </div> <span class="population">128,910,799</span> </li> </ol> <p class="total">Total: <span class="total-population" id="total-p">Calculate it!</span></p> <p class="average">Average: <span class="average-population" id="avg-p">Calculate it!</span></p> </div> <script type="text/javascript" src="main.cb0c67ee.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Population top</title>
+    <link rel="stylesheet" href="/main.48b3db1d.css">
+  <script src="/main.48b3db1d.js"></script></head>
+  <body>
+    <div class="container">
+      <h1>TOP 10 LARGEST COUNTRIES BY POPULATION</h1>
+      <ol class="list">
+        <li class="list__item">
+          <div>
+            <img src="/flag-china.0ea27496.gif" alt="China flag">
+            China:
+          </div>
+          <span class="population">1,439,234,240</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-india.2752b7da.gif" alt="India flag">
+            India:
+          </div>
+          <span class="population">1,379,784,212</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-usa.42a3bf11.gif" alt="USA flag">
+            USA:
+          </div>
+          <span class="population">330,971,314</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-indonesia.1e831bc6.gif" alt="Indonesia flag">
+            Indonesia:
+          </div>
+          <span class="population">273,476,730</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-pakistan.f49b3803.gif" alt="Pakistan flag">
+            Pakistan:
+          </div>
+          <span class="population">220,822,025</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-brazil.760e8c53.gif" alt="Brazil flag">
+            Brazil:
+          </div>
+          <span class="population">220,822,025</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-nigeria.ab47d8d9.gif" alt="Nigeria flag">
+            Nigeria:
+          </div>
+          <span class="population">220,822,025</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-bangladesh.a04178f3.gif" alt="Bangladesh flag">
+            Bangladesh:
+          </div>
+          <span class="population">164,662,809</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-russia.1ccce09b.gif" alt="Russia flag">
+            Russia:
+          </div>
+          <span class="population">145,933,461</span>
+        </li>
+        <li class="list__item">
+          <div>
+            <img src="/flag-mexico.97953134.gif" alt="Mexico flag">
+            Mexico:
+          </div>
+          <span class="population">128,910,799</span>
+        </li>
+      </ol>
+      <p class="total">Total: <span class="total-population" id="total-p">Calculate it!</span></p>
+      <p class="average">Average: <span class="average-population" id="avg-p">Calculate it!</span></p>
+    </div>
+    <script type="text/javascript" src="/main.d8ebb8d6.js"></script>
+  </body>
+</html>
